created nested for loop to produce multiple t test comparing the two dummy indicators against all numeric observations.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "7b14672e",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from pyampute.exploration.md_patterns import mdPatterns\n",
-    "from pyampute.exploration.mcar_statistical_tests import MCARTest"
+    "from pyampute.exploration.mcar_statistical_tests import MCARTest\n",
+    "from scipy import stats"
    ]
   },
   {
@@ -779,16 +780,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "fc1ce07f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t-test for person_age and pel_missing\n",
+      "P value 0.0259\n",
+      "Conclusion: Reject H0 MCAR - Missingness of Y depends on X.\n",
+      "t-test for person_age and lir_missing\n",
+      "P value 0.1185\n",
+      "Conclusion: Fail to Reject H0 MCAR - Missingness of Y doesn't depend on X.\n",
+      "t-test for person_income and pel_missing\n",
+      "P value 0.0000\n",
+      "Conclusion: Reject H0 MCAR - Missingness of Y depends on X.\n",
+      "t-test for person_income and lir_missing\n",
+      "P value 0.5018\n",
+      "Conclusion: Fail to Reject H0 MCAR - Missingness of Y doesn't depend on X.\n",
+      "t-test for loan_amnt and pel_missing\n",
+      "P value 0.0000\n",
+      "Conclusion: Reject H0 MCAR - Missingness of Y depends on X.\n",
+      "t-test for loan_amnt and lir_missing\n",
+      "P value 0.7004\n",
+      "Conclusion: Fail to Reject H0 MCAR - Missingness of Y doesn't depend on X.\n",
+      "t-test for loan_percent_income and pel_missing\n",
+      "P value 0.0000\n",
+      "Conclusion: Reject H0 MCAR - Missingness of Y depends on X.\n",
+      "t-test for loan_percent_income and lir_missing\n",
+      "P value 0.6348\n",
+      "Conclusion: Fail to Reject H0 MCAR - Missingness of Y doesn't depend on X.\n",
+      "t-test for cb_person_cred_hist_length and pel_missing\n",
+      "P value 0.1545\n",
+      "Conclusion: Fail to Reject H0 MCAR - Missingness of Y doesn't depend on X.\n",
+      "t-test for cb_person_cred_hist_length and lir_missing\n",
+      "P value 0.0361\n",
+      "Conclusion: Reject H0 MCAR - Missingness of Y depends on X.\n",
+      "Total number of rejections: 5\n",
+      "Total number of non rejectionsL 5 \n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
+    "rejected = 0\n",
+    "not_rejected = 0\n",
     "for numeric_feature in numeric_features:\n",
     "    for dummy_indicator in dummy_indicators:\n",
     "        observed_group = credit_risk_dataset.loc[credit_risk_dataset[dummy_indicator] == 0, numeric_feature]\n",
     "        missing_group = credit_risk_dataset.loc[credit_risk_dataset[dummy_indicator] == 1, numeric_feature]\n",
-    "        stats."
+    "        t_stat, p_value_ttest = stats.ttest_ind(observed_group,\n",
+    "                         missing_group,\n",
+    "                         equal_var=False)\n",
+    "        print(f\"t-test for {numeric_feature} and {dummy_indicator}\")\n",
+    "        print(f\"P value {p_value_ttest:.4f}\")\n",
+    "        if p_value_ttest <= 0.05:\n",
+    "            print(\"Conclusion: Reject H0 MCAR - Missingness of Y depends on X.\")\n",
+    "            rejected += 1\n",
+    "        else:\n",
+    "            print(\"Conclusion: Fail to Reject H0 MCAR - Missingness of Y doesn't depend on X.\")\n",
+    "            not_rejected += 1\n",
+    "\n",
+    "print(f\"Total number of rejections: {rejected}\")\n",
+    "print(f\"Total number of non rejectionsL {not_rejected} \")\n"
    ]
   },
   {
