added counts of whether null hypothesis rejection or fail to reject was due to pel and lir variable. it appears pel is mar and lir is mcar.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "5955048f",
    "metadata": {},
    "outputs": [],
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "7d606cb2",
    "metadata": {},
    "outputs": [],
@@ -660,24 +660,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "id": "bd4bc3b0",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Little MCAR P value test: 0.0\n",
+      "Reject H0 MCAR. Y missingness is dependent on X observed values.\n"
+     ]
     }
    ],
    "source": [
-    "mt_little.little_mcar_test(\n",
-    "    X=numeric_dataset)"
+    "p_value = mt_little.little_mcar_test(\n",
+    "    X=numeric_dataset)\n",
+    "print(F\"Little MCAR P value test: {p_value}\")\n",
+    "if p_value <= 0.05:\n",
+    "    print(f\"Reject H0 MCAR. Y missingness is dependent on X observed values.\")\n",
+    "else:\n",
+    "    print(f\"Fail to Reject H0 MCAR. Y missingness isn't dependent on X observed values.\")"
    ]
   },
   {
@@ -780,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "fc1ce07f",
    "metadata": {},
    "outputs": [
@@ -819,14 +822,19 @@
       "P value 0.0361\n",
       "Conclusion: Reject H0 MCAR - Missingness of Y depends on X.\n",
       "Total number of rejections: 5\n",
-      "Total number of non rejectionsL 5 \n"
+      "Total number of non rejections 5 \n",
+      "Number of times H0 was rejected because it was PEL:4\n",
+      "Number of times H0 was rejected because it was LIR: 1\n",
+      "Number of times H0 was failed rejected because it was PEL:1\n",
+      "Number of times H0 was failed rejected because it was LIR: 4\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "rejected = 0\n",
-    "not_rejected = 0\n",
+    "pel_h0_rejection_count = 0\n",
+    "lir_h0_rejection_count = 0\n",
+    "pel_h0_fail_rejection_count = 0\n",
+    "lir_h0_fail_rejection_count = 0\n",
     "for numeric_feature in numeric_features:\n",
     "    for dummy_indicator in dummy_indicators:\n",
     "        observed_group = credit_risk_dataset.loc[credit_risk_dataset[dummy_indicator] == 0, numeric_feature]\n",
@@ -839,12 +847,29 @@
     "        if p_value_ttest <= 0.05:\n",
     "            print(\"Conclusion: Reject H0 MCAR - Missingness of Y depends on X.\")\n",
     "            rejected += 1\n",
+    "            if dummy_indicator == \"pel_missing\":\n",
+    "                pel_h0_rejection_count += 1\n",
+    "            else:\n",
+    "                lir_h0_rejection_count += 1\n",
     "        else:\n",
     "            print(\"Conclusion: Fail to Reject H0 MCAR - Missingness of Y doesn't depend on X.\")\n",
     "            not_rejected += 1\n",
-    "\n",
-    "print(f\"Total number of rejections: {rejected}\")\n",
-    "print(f\"Total number of non rejectionsL {not_rejected} \")\n"
+    "            if dummy_indicator == \"pel_missing\":\n",
+    "                pel_h0_fail_rejection_count += 1\n",
+    "            else:\n",
+    "                lir_h0_fail_rejection_count += 1\n",
+    "print(f\"Number of times H0 was rejected because it was PEL:{pel_h0_rejection_count}\")\n",
+    "print(f\"Number of times H0 was rejected because it was LIR: {lir_h0_rejection_count}\")\n",
+    "print(f\"Number of times H0 was failed rejected because it was PEL:{pel_h0_fail_rejection_count}\")\n",
+    "print(f\"Number of times H0 was failed rejected because it was LIR: {lir_h0_fail_rejection_count}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51e746e7",
+   "metadata": {},
+   "source": [
+    "##### It appears that PEL is MAR, but LIR is MCAR"
    ]
   },
   {
