--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -1154,11 +1154,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "94d232a4",
+   "execution_count": 76,
+   "id": "e363c2fa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pred_df = credit_risk_dataset.select_dtypes(include=['int64', 'float64', 'int32']).drop(labels=['pel_missing', 'lir_missing'], axis=1)"
+   ]
   },
   {
    "cell_type": "code",
