--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -1154,76 +1154,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 85,
    "id": "e363c2fa",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>person_age</th>\n",
-       "      <th>person_income</th>\n",
-       "      <th>person_emp_length</th>\n",
-       "      <th>loan_amnt</th>\n",
-       "      <th>loan_int_rate</th>\n",
-       "      <th>loan_percent_income</th>\n",
-       "      <th>cb_person_cred_hist_length</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>21</td>\n",
-       "      <td>9600</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>11.14</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   person_age  person_income  person_emp_length  loan_amnt  loan_int_rate  \\\n",
-       "0          21           9600                5.0       1000          11.14   \n",
-       "\n",
-       "   loan_percent_income  cb_person_cred_hist_length  \n",
-       "0                  0.1                           2  "
+       "Index(['person_age', 'person_income', 'person_emp_length', 'loan_amnt',\n",
+       "       'loan_int_rate', 'loan_percent_income', 'cb_person_cred_hist_length'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pred_df = credit_risk_dataset.select_dtypes(include=['int64', 'float64', 'int32']).drop(labels=['pel_missing', 'lir_missing'], axis=1)\n",
-    "pred_df.head(1)"
+    "pred_df = credit_risk_dataset.select_dtypes(include=['int64', 'float64', 'int32']).drop(labels=['pel_missing', 'lir_missing'], axis=1).columns\n",
+    "pred_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 96,
+   "id": "0aa8c671",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>Logit Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>      <td>pel_missing</td>   <th>  No. Observations:  </th>   <td> 29459</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                 <td>Logit</td>      <th>  Df Residuals:      </th>   <td> 29452</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>                 <td>MLE</td>       <th>  Df Model:          </th>   <td>     6</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>            <td>Fri, 12 Dec 2025</td> <th>  Pseudo R-squ.:     </th>   <td>0.06822</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                <td>21:03:47</td>     <th>  Log-Likelihood:    </th>  <td> -3512.9</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>converged:</th>             <td>True</td>       <th>  LL-Null:           </th>  <td> -3770.1</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>     <td>nonrobust</td>    <th>  LLR p-value:       </th> <td>6.549e-108</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "               <td></td>                 <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Intercept</th>                  <td>   -1.6663</td> <td>    0.308</td> <td>   -5.408</td> <td> 0.000</td> <td>   -2.270</td> <td>   -1.062</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>person_age</th>                 <td>   -0.0040</td> <td>    0.012</td> <td>   -0.326</td> <td> 0.744</td> <td>   -0.028</td> <td>    0.020</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>person_income</th>              <td>-9.254e-06</td> <td>  2.4e-06</td> <td>   -3.861</td> <td> 0.000</td> <td> -1.4e-05</td> <td>-4.56e-06</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>loan_amnt</th>                  <td>   -0.0001</td> <td> 1.51e-05</td> <td>   -8.615</td> <td> 0.000</td> <td>   -0.000</td> <td>   -0.000</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>loan_int_rate</th>              <td>   -0.1011</td> <td>    0.012</td> <td>   -8.605</td> <td> 0.000</td> <td>   -0.124</td> <td>   -0.078</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>loan_percent_income</th>        <td>    4.4722</td> <td>    0.579</td> <td>    7.728</td> <td> 0.000</td> <td>    3.338</td> <td>    5.606</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>cb_person_cred_hist_length</th> <td>    0.0076</td> <td>    0.019</td> <td>    0.406</td> <td> 0.684</td> <td>   -0.029</td> <td>    0.045</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/latex": [
+       "\\begin{center}\n",
+       "\\begin{tabular}{lclc}\n",
+       "\\toprule\n",
+       "\\textbf{Dep. Variable:}                 &   pel\\_missing   & \\textbf{  No. Observations:  } &    29459    \\\\\n",
+       "\\textbf{Model:}                         &      Logit       & \\textbf{  Df Residuals:      } &    29452    \\\\\n",
+       "\\textbf{Method:}                        &       MLE        & \\textbf{  Df Model:          } &        6    \\\\\n",
+       "\\textbf{Date:}                          & Fri, 12 Dec 2025 & \\textbf{  Pseudo R-squ.:     } &  0.06822    \\\\\n",
+       "\\textbf{Time:}                          &     21:03:47     & \\textbf{  Log-Likelihood:    } &   -3512.9   \\\\\n",
+       "\\textbf{converged:}                     &       True       & \\textbf{  LL-Null:           } &   -3770.1   \\\\\n",
+       "\\textbf{Covariance Type:}               &    nonrobust     & \\textbf{  LLR p-value:       } & 6.549e-108  \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "\\begin{tabular}{lcccccc}\n",
+       "                                        & \\textbf{coef} & \\textbf{std err} & \\textbf{z} & \\textbf{P$> |$z$|$} & \\textbf{[0.025} & \\textbf{0.975]}  \\\\\n",
+       "\\midrule\n",
+       "\\textbf{Intercept}                      &      -1.6663  &        0.308     &    -5.408  &         0.000        &       -2.270    &       -1.062     \\\\\n",
+       "\\textbf{person\\_age}                    &      -0.0040  &        0.012     &    -0.326  &         0.744        &       -0.028    &        0.020     \\\\\n",
+       "\\textbf{person\\_income}                 &   -9.254e-06  &      2.4e-06     &    -3.861  &         0.000        &     -1.4e-05    &    -4.56e-06     \\\\\n",
+       "\\textbf{loan\\_amnt}                     &      -0.0001  &     1.51e-05     &    -8.615  &         0.000        &       -0.000    &       -0.000     \\\\\n",
+       "\\textbf{loan\\_int\\_rate}                &      -0.1011  &        0.012     &    -8.605  &         0.000        &       -0.124    &       -0.078     \\\\\n",
+       "\\textbf{loan\\_percent\\_income}          &       4.4722  &        0.579     &     7.728  &         0.000        &        3.338    &        5.606     \\\\\n",
+       "\\textbf{cb\\_person\\_cred\\_hist\\_length} &       0.0076  &        0.019     &     0.406  &         0.684        &       -0.029    &        0.045     \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "%\\caption{Logit Regression Results}\n",
+       "\\end{center}"
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                           Logit Regression Results                           \n",
+       "==============================================================================\n",
+       "Dep. Variable:            pel_missing   No. Observations:                29459\n",
+       "Model:                          Logit   Df Residuals:                    29452\n",
+       "Method:                           MLE   Df Model:                            6\n",
+       "Date:                Fri, 12 Dec 2025   Pseudo R-squ.:                 0.06822\n",
+       "Time:                        21:03:47   Log-Likelihood:                -3512.9\n",
+       "converged:                       True   LL-Null:                       -3770.1\n",
+       "Covariance Type:            nonrobust   LLR p-value:                6.549e-108\n",
+       "==============================================================================================\n",
+       "                                 coef    std err          z      P>|z|      [0.025      0.975]\n",
+       "----------------------------------------------------------------------------------------------\n",
+       "Intercept                     -1.6663      0.308     -5.408      0.000      -2.270      -1.062\n",
+       "person_age                    -0.0040      0.012     -0.326      0.744      -0.028       0.020\n",
+       "person_income              -9.254e-06    2.4e-06     -3.861      0.000    -1.4e-05   -4.56e-06\n",
+       "loan_amnt                     -0.0001   1.51e-05     -8.615      0.000      -0.000      -0.000\n",
+       "loan_int_rate                 -0.1011      0.012     -8.605      0.000      -0.124      -0.078\n",
+       "loan_percent_income            4.4722      0.579      7.728      0.000       3.338       5.606\n",
+       "cb_person_cred_hist_length     0.0076      0.019      0.406      0.684      -0.029       0.045\n",
+       "==============================================================================================\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "smf.logit(\n",
+    "    formula = \"pel_missing ~ person_age + person_income + loan_amnt + loan_int_rate + loan_percent_income + cb_person_cred_hist_length\",\n",
+    "    data = credit_risk_dataset\n",
+    ").fit(disp=False).summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "id": "1f40f5fe",
    "metadata": {},
    "outputs": [
@@ -1311,7 +1392,7 @@
        "  <th>Date:</th>            <td>Fri, 12 Dec 2025</td> <th>  Pseudo R-squ.:     </th>   <td>   inf</td>   \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                <td>19:41:28</td>     <th>  Log-Likelihood:    </th> <td>-1.7813e-08</td>\n",
+       "  <th>Time:</th>                <td>20:49:55</td>     <th>  Log-Likelihood:    </th> <td>-1.7813e-08</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>converged:</th>             <td>False</td>      <th>  LL-Null:           </th>  <td>  0.0000</td>  \n",
@@ -1358,7 +1439,7 @@
        "\\textbf{Model:}                         &      Logit       & \\textbf{  Df Residuals:      } &     28624    \\\\\n",
        "\\textbf{Method:}                        &       MLE        & \\textbf{  Df Model:          } &         7    \\\\\n",
        "\\textbf{Date:}                          & Fri, 12 Dec 2025 & \\textbf{  Pseudo R-squ.:     } &       inf    \\\\\n",
-       "\\textbf{Time:}                          &     19:41:28     & \\textbf{  Log-Likelihood:    } & -1.7813e-08  \\\\\n",
+       "\\textbf{Time:}                          &     20:49:55     & \\textbf{  Log-Likelihood:    } & -1.7813e-08  \\\\\n",
        "\\textbf{converged:}                     &      False       & \\textbf{  LL-Null:           } &     0.0000   \\\\\n",
        "\\textbf{Covariance Type:}               &    nonrobust     & \\textbf{  LLR p-value:       } &     1.000    \\\\\n",
        "\\bottomrule\n",
@@ -1392,7 +1473,7 @@
        "Model:                          Logit   Df Residuals:                    28624\n",
        "Method:                           MLE   Df Model:                            7\n",
        "Date:                Fri, 12 Dec 2025   Pseudo R-squ.:                     inf\n",
-       "Time:                        19:41:28   Log-Likelihood:            -1.7813e-08\n",
+       "Time:                        20:49:55   Log-Likelihood:            -1.7813e-08\n",
        "converged:                      False   LL-Null:                        0.0000\n",
        "Covariance Type:            nonrobust   LLR p-value:                     1.000\n",
        "==============================================================================================\n",
@@ -1414,7 +1495,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 80,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
