created pel_missing varb.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "d2bfb211",
    "metadata": {},
    "outputs": [],
@@ -1104,11 +1104,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "id": "f51b18cd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pel_missing = credit_risk_dataset.pel_missing"
+   ]
   },
   {
    "cell_type": "code",
