created lir_missing varb.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -1114,6 +1114,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 100,
+   "id": "ad78339a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lir_missing = credit_risk_dataset.lir_missing"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 86,
    "id": "1f40f5fe",
    "metadata": {},
