got rid of prior two commits and created a dummy indicator varbiable instead.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -1104,22 +1104,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "f51b18cd",
+   "execution_count": 102,
+   "id": "702845c3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pel_missing = credit_risk_dataset.pel_missing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "id": "ad78339a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lir_missing = credit_risk_dataset.lir_missing"
+    "dummy_indicator = credit_risk_dataset[['pel_missing', 'lir_missing']]"
    ]
   },
   {
