created cross tab of loan_grade and pel_missing for chi_squared testing of MCAR.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -1251,11 +1251,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "77ca3319",
+   "execution_count": 76,
+   "id": "8f55bda0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "contingency_table = pd.crosstab(index = credit_risk_dataset.loan_grade, \n",
+    "            columns = credit_risk_dataset.pel_missing)"
+   ]
   },
   {
    "cell_type": "markdown",
