created categorical df

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -22,14 +22,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "318413f7",
-   "metadata": {},
-   "source": [
-    "## Identify/Handle Duplicted Values"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "0cd544bc",
@@ -1250,6 +1242,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "318413f7",
+   "metadata": {},
+   "source": [
+    "## Identify/Handle Duplicted Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "0c7b3d04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_df = credit_risk_dataset.select_dtypes(\n",
+    "    include = ['category']\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 76,
    "id": "8f55bda0",
@@ -1261,12 +1273,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "a5189181",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Chi2ContingencyResult(statistic=72.28349207371221, pvalue=1.3894677478243866e-13, dof=6, expected_freq=array([[1.04090976e+04, 2.92902404e+02],\n",
+       "       [1.00998009e+04, 2.84199081e+02],\n",
+       "       [6.25985350e+03, 1.76146503e+02],\n",
+       "       [3.51995180e+03, 9.90481965e+01],\n",
+       "       [9.36643710e+02, 2.63562899e+01],\n",
+       "       [2.34404085e+02, 6.59591472e+00],\n",
+       "       [6.22483878e+01, 1.75161221e+00]]))"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.chi2_contingency(\n",
+    "    observed = contingency_table,\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "37495775",
    "metadata": {},
    "source": [
     "### MAR Identification"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9983149",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
