--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -34,6 +34,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0660bab9",
+   "metadata": {},
+   "source": [
+    "## Identify/Handle Duplicted Values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "a5c858d6",
@@ -1242,14 +1250,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "318413f7",
-   "metadata": {},
-   "source": [
-    "## Identify/Handle Duplicted Values"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 79,
    "id": "0c7b3d04",
@@ -1263,43 +1263,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "8f55bda0",
+   "execution_count": 89,
+   "id": "cc7d2c12",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conclusion: Reject H0 (MCAR) pvalue 0.000: Missingness of pel_missing depends on person_home_ownership.\n",
+      "Conclusion: Fail to Reject H0 (MCAR) pvalue 0.895: Missingness in pel_missing is completely at random when compared to loan_intent\n",
+      "Conclusion: Reject H0 (MCAR) pvalue 0.000: Missingness of pel_missing depends on loan_grade.\n",
+      "Conclusion: Fail to Reject H0 (MCAR) pvalue 0.256: Missingness in lir_missing is completely at random when compared to person_home_ownership\n",
+      "Conclusion: Fail to Reject H0 (MCAR) pvalue 0.144: Missingness in lir_missing is completely at random when compared to loan_intent\n",
+      "Conclusion: Fail to Reject H0 (MCAR) pvalue 0.090: Missingness in lir_missing is completely at random when compared to loan_grade\n"
+     ]
+    }
+   ],
    "source": [
-    "contingency_table = pd.crosstab(index = credit_risk_dataset.loan_grade, \n",
-    "            columns = credit_risk_dataset.pel_missing)"
+    "for dummy in dummy_indicator:\n",
+    "    for cat_feature in categorical_df:\n",
+    "        ct = pd.crosstab(index = credit_risk_dataset[cat_feature], \n",
+    "            columns = credit_risk_dataset[dummy])\n",
+    "        statistic, pvalue_chi2, dof, expected_freq = stats.chi2_contingency(\n",
+    "            observed = ct\n",
+    "        )\n",
+    "        if pvalue_chi2 < 0.05:\n",
+    "            print(f\"Conclusion: Reject H0 (MCAR) pvalue {pvalue_chi2:.3f}: Missingness of {dummy} depends on {cat_feature}.\")\n",
+    "        else:\n",
+    "            print(F\"Conclusion: Fail to Reject H0 (MCAR) pvalue {pvalue_chi2:.3f}: Missingness in {dummy} is completely at random when compared to {cat_feature}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b43d76d",
+   "metadata": {},
+   "source": [
+    "The same conclusion is true for the categorical variables: pel_missing is MAR and lir_missing is MCAR."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "a5189181",
+   "execution_count": null,
+   "id": "f992bf4f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Chi2ContingencyResult(statistic=72.28349207371221, pvalue=1.3894677478243866e-13, dof=6, expected_freq=array([[1.04090976e+04, 2.92902404e+02],\n",
-       "       [1.00998009e+04, 2.84199081e+02],\n",
-       "       [6.25985350e+03, 1.76146503e+02],\n",
-       "       [3.51995180e+03, 9.90481965e+01],\n",
-       "       [9.36643710e+02, 2.63562899e+01],\n",
-       "       [2.34404085e+02, 6.59591472e+00],\n",
-       "       [6.22483878e+01, 1.75161221e+00]]))"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stats.chi2_contingency(\n",
-    "    observed = contingency_table,\n",
-    ")"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
