filtered categorical dataframe to not include categories that contain zero observed frequencies.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "id": "4ab632c4",
    "metadata": {},
    "outputs": [
@@ -1508,7 +1508,7 @@
    ],
    "source": [
     "for dummy in dummy_indicator:\n",
-    "    for cat_feature in cat_df:\n",
+    "    for cat_feature in categorical_df:\n",
     "        pel_model = smf.logit(\n",
     "            formula = f\"{dummy} ~ {cat_feature}\",\n",
     "            data = credit_risk_dataset\n",
@@ -1573,14 +1573,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "id": "07902c3a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat_df = credit_risk_dataset.select_dtypes(\n",
-    "            include=['category']\n",
-    "                )"
+    "filtered_categorical_df = categorical_df.loc[(categorical_df['person_home_ownership'] != 'OTHER') | (categorical_df['loan_grade'] != 'G')]"
    ]
   },
   {
@@ -1593,11 +1591,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "id": "f9983149",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RENT        16374\n",
+       "MORTGAGE    13366\n",
+       "OWN          2563\n",
+       "OTHER           0\n",
+       "Name: person_home_ownership, dtype: int64"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categorical_df[categorical_df['person_home_ownership'] != 'OTHER'][\"person_home_ownership\"].value_counts()"
+   ]
   },
   {
    "cell_type": "code",
