ran pd crosstab on filetered df and it didnt work.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -1518,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "id": "bed222cd",
    "metadata": {},
    "outputs": [
@@ -1565,7 +1565,7 @@
    ],
    "source": [
     "for dummy in dummy_indicator:\n",
-    "    for cat_feature in cat_df:\n",
+    "    for cat_feature in categorical_df:\n",
     "        ct = pd.crosstab(index=credit_risk_dataset[dummy],\n",
     "                     columns=credit_risk_dataset[cat_feature])\n",
     "        print(ct)"
@@ -1582,36 +1582,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "720409d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "person_home_ownership  MORTGAGE  OTHER   OWN   RENT\n",
+      "pel_missing                                        \n",
+      "0                         13018    106  2391  16007\n",
+      "1                           348      0   172    367\n",
+      "loan_intent  DEBTCONSOLIDATION  EDUCATION  HOMEIMPROVEMENT  MEDICAL  PERSONAL  \\\n",
+      "pel_missing                                                                     \n",
+      "0                         5044       6246             3499     5869      5346   \n",
+      "1                          145        163               95      173       150   \n",
+      "\n",
+      "loan_intent  VENTURE  \n",
+      "pel_missing           \n",
+      "0               5518  \n",
+      "1                161  \n",
+      "loan_grade       A      B     C     D    E    F   G\n",
+      "pel_missing                                        \n",
+      "0            10300  10121  6301  3549  951  236  64\n",
+      "1              402    263   135    70   12    5   0\n",
+      "person_home_ownership  MORTGAGE  OTHER   OWN   RENT\n",
+      "lir_missing                                        \n",
+      "0                         12051     93  2336  14835\n",
+      "1                          1315     13   227   1539\n",
+      "loan_intent  DEBTCONSOLIDATION  EDUCATION  HOMEIMPROVEMENT  MEDICAL  PERSONAL  \\\n",
+      "lir_missing                                                                     \n",
+      "0                         4683       5818             3279     5426      4992   \n",
+      "1                          506        591              315      616       504   \n",
+      "\n",
+      "loan_intent  VENTURE  \n",
+      "lir_missing           \n",
+      "0               5117  \n",
+      "1                562  \n",
+      "loan_grade      A     B     C     D    E    F   G\n",
+      "lir_missing                                      \n",
+      "0            9712  9335  5807  3308  880  214  59\n",
+      "1             990  1049   629   311   83   27   5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for dummy in dummy_indicator:\n",
+    "    for cat_feature in filtered_categorical_df:\n",
+    "        ct = pd.crosstab(index=credit_risk_dataset[dummy],\n",
+    "                     columns=credit_risk_dataset[cat_feature])\n",
+    "        print(ct)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "37495775",
    "metadata": {},
    "source": [
     "### MAR Identification"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
-   "id": "f9983149",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RENT        16374\n",
-       "MORTGAGE    13366\n",
-       "OWN          2563\n",
-       "OTHER           0\n",
-       "Name: person_home_ownership, dtype: int64"
-      ]
-     },
-     "execution_count": 123,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "categorical_df[categorical_df['person_home_ownership'] != 'OTHER'][\"person_home_ownership\"].value_counts()"
    ]
   },
   {
