in order to fix the problem I replaced OTHER category in the person home ownership variable with MORTGAGE.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -1637,6 +1637,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "a3019b21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_df[\"person_home_ownership\"] = categorical_df[\"person_home_ownership\"].replace(\n",
+    "    to_replace = \"OTHER\",\n",
+    "    value = \"MORTGAGE\"  \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fda9418",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "37495775",
    "metadata": {},
