replaced loan grade G with F in categorical df.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -1651,8 +1651,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "id": "4fda9418",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_df[\"loan_grade\"] = categorical_df[\"loan_grade\"].replace(\n",
+    "    to_replace = \"G\",\n",
+    "    value = \" F\"  \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18a1d89c",
    "metadata": {},
    "outputs": [],
    "source": []
