replace on credit risk dataset copy.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -1674,12 +1674,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "da3be1e5",
+   "execution_count": 86,
+   "id": "d18d4ffa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "credit_risk_dataset_copy"
+    "credit_risk_dataset_copy[\"person_home_ownership\"] = credit_risk_dataset_copy[\"person_home_ownership\"].replace(\n",
+    "    to_replace = \"OTHER\",\n",
+    "    value = \"MORTGAGE\"  \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "b04a20ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "credit_risk_dataset_copy[\"loan_grade\"] = credit_risk_dataset_copy[\"loan_grade\"].replace(\n",
+    "    to_replace = \"G\",\n",
+    "    value = \"F\"  \n",
+    ")"
    ]
   },
   {
