--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -1483,6 +1483,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a7fe8724",
+   "metadata": {},
+   "source": [
+    "PEL_missing is MAR and LIR_missing is MCAR - same results as before."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d4413acb",
@@ -1497,14 +1505,6 @@
    "source": [
     "### MAR Identification"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "06fc0a1b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
