--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 103,
    "id": "7b14672e",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,8 @@
     "from pyampute.exploration.mcar_statistical_tests import MCARTest\n",
     "from scipy import stats\n",
     "import statsmodels.api as sm\n",
-    "import statsmodels.formula.api as smf"
+    "import statsmodels.formula.api as smf\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -404,7 +405,7 @@
    "id": "8c0ac082",
    "metadata": {},
    "source": [
-    "## Missing Values"
+    "## MCAR,MAR,MNAR Identification"
    ]
   },
   {
@@ -617,7 +618,7 @@
    "id": "c5c0b90d",
    "metadata": {},
    "source": [
-    "### MCAR Testing\n",
+    "### MCAR/MAR Testing\n",
     "* Null Hypothesis: Data is MCAR\n",
     "* Alternative Hypothesis: Data is not MCAR"
    ]
@@ -1491,44 +1492,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4413acb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "37495775",
+   "id": "6002f53f",
    "metadata": {},
    "source": [
-    "### MAR Identification"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "id": "8137769e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['person_age', 'person_income', 'person_emp_length', 'loan_amnt',\n",
-       "       'loan_int_rate', 'loan_percent_income', 'cb_person_cred_hist_length'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "numeric_features = credit_risk_dataset.select_dtypes(\n",
-    "    include=['int64', 'float64']).columns\n",
-    "numeric_features"
+    "#### MCAR Visualization"
    ]
   },
   {
@@ -1684,12 +1652,372 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "325f29b5",
+   "metadata": {},
+   "source": [
+    "### "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee1fbe2b",
+   "metadata": {},
+   "source": [
+    "## Train/Test/Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "346dd572",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>person_age</th>\n",
+       "      <th>person_income</th>\n",
+       "      <th>person_home_ownership</th>\n",
+       "      <th>person_emp_length</th>\n",
+       "      <th>loan_intent</th>\n",
+       "      <th>loan_grade</th>\n",
+       "      <th>loan_amnt</th>\n",
+       "      <th>loan_int_rate</th>\n",
+       "      <th>loan_status</th>\n",
+       "      <th>loan_percent_income</th>\n",
+       "      <th>cb_person_default_on_file</th>\n",
+       "      <th>cb_person_cred_hist_length</th>\n",
+       "      <th>pel_missing</th>\n",
+       "      <th>lir_missing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>21</td>\n",
+       "      <td>9600</td>\n",
+       "      <td>OWN</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>EDUCATION</td>\n",
+       "      <td>B</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>11.14</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>25</td>\n",
+       "      <td>9600</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>MEDICAL</td>\n",
+       "      <td>C</td>\n",
+       "      <td>5500</td>\n",
+       "      <td>12.87</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>23</td>\n",
+       "      <td>65500</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>MEDICAL</td>\n",
+       "      <td>C</td>\n",
+       "      <td>35000</td>\n",
+       "      <td>15.23</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>24</td>\n",
+       "      <td>54400</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>MEDICAL</td>\n",
+       "      <td>C</td>\n",
+       "      <td>35000</td>\n",
+       "      <td>14.27</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>True</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>21</td>\n",
+       "      <td>9900</td>\n",
+       "      <td>OWN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>VENTURE</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2500</td>\n",
+       "      <td>7.14</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32569</th>\n",
+       "      <td>57</td>\n",
+       "      <td>53000</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>PERSONAL</td>\n",
+       "      <td>C</td>\n",
+       "      <td>5800</td>\n",
+       "      <td>13.16</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>False</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32570</th>\n",
+       "      <td>54</td>\n",
+       "      <td>120000</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>PERSONAL</td>\n",
+       "      <td>A</td>\n",
+       "      <td>17625</td>\n",
+       "      <td>7.49</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>False</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32571</th>\n",
+       "      <td>65</td>\n",
+       "      <td>76000</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>HOMEIMPROVEMENT</td>\n",
+       "      <td>B</td>\n",
+       "      <td>35000</td>\n",
+       "      <td>10.99</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>False</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32572</th>\n",
+       "      <td>56</td>\n",
+       "      <td>150000</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>PERSONAL</td>\n",
+       "      <td>B</td>\n",
+       "      <td>15000</td>\n",
+       "      <td>11.48</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>False</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32573</th>\n",
+       "      <td>66</td>\n",
+       "      <td>42000</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>MEDICAL</td>\n",
+       "      <td>B</td>\n",
+       "      <td>6475</td>\n",
+       "      <td>9.99</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>False</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>32409 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       person_age  person_income person_home_ownership  person_emp_length  \\\n",
+       "0              21           9600                   OWN                5.0   \n",
+       "1              25           9600              MORTGAGE                1.0   \n",
+       "2              23          65500                  RENT                4.0   \n",
+       "3              24          54400                  RENT                8.0   \n",
+       "4              21           9900                   OWN                2.0   \n",
+       "...           ...            ...                   ...                ...   \n",
+       "32569          57          53000              MORTGAGE                1.0   \n",
+       "32570          54         120000              MORTGAGE                4.0   \n",
+       "32571          65          76000                  RENT                3.0   \n",
+       "32572          56         150000              MORTGAGE                5.0   \n",
+       "32573          66          42000                  RENT                2.0   \n",
+       "\n",
+       "           loan_intent loan_grade  loan_amnt  loan_int_rate  loan_status  \\\n",
+       "0            EDUCATION          B       1000          11.14        False   \n",
+       "1              MEDICAL          C       5500          12.87         True   \n",
+       "2              MEDICAL          C      35000          15.23         True   \n",
+       "3              MEDICAL          C      35000          14.27         True   \n",
+       "4              VENTURE          A       2500           7.14         True   \n",
+       "...                ...        ...        ...            ...          ...   \n",
+       "32569         PERSONAL          C       5800          13.16        False   \n",
+       "32570         PERSONAL          A      17625           7.49        False   \n",
+       "32571  HOMEIMPROVEMENT          B      35000          10.99         True   \n",
+       "32572         PERSONAL          B      15000          11.48        False   \n",
+       "32573          MEDICAL          B       6475           9.99        False   \n",
+       "\n",
+       "       loan_percent_income  cb_person_default_on_file  \\\n",
+       "0                     0.10                      False   \n",
+       "1                     0.57                      False   \n",
+       "2                     0.53                      False   \n",
+       "3                     0.55                       True   \n",
+       "4                     0.25                      False   \n",
+       "...                    ...                        ...   \n",
+       "32569                 0.11                      False   \n",
+       "32570                 0.15                      False   \n",
+       "32571                 0.46                      False   \n",
+       "32572                 0.10                      False   \n",
+       "32573                 0.15                      False   \n",
+       "\n",
+       "       cb_person_cred_hist_length  pel_missing  lir_missing  \n",
+       "0                               2            0            0  \n",
+       "1                               3            0            0  \n",
+       "2                               2            0            0  \n",
+       "3                               4            0            0  \n",
+       "4                               2            0            0  \n",
+       "...                           ...          ...          ...  \n",
+       "32569                          30            0            0  \n",
+       "32570                          19            0            0  \n",
+       "32571                          28            0            0  \n",
+       "32572                          26            0            0  \n",
+       "32573                          30            0            0  \n",
+       "\n",
+       "[32409 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff821820",
+   "id": "6dcabcfa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X = credit_risk_dataset.drop(\n",
+    "    labels='loan_status',\n",
+    "    axis=1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10243efb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = credit_risk_dataset.loan_status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "467a4c56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_test_split(\n",
+    "    \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2eb8af8a",
+   "metadata": {},
+   "source": [
+    "## Outliers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b3016f1",
+   "metadata": {},
+   "source": [
+    "#### Outlier Visualization"
+   ]
   }
  ],
  "metadata": {
