--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -1993,13 +1993,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "id": "467a4c56",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_test_split(\n",
-    "    \n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X,\n",
+    "    y,\n",
+    "    test_size = 0.3,\n",
+    "    random_state = 42\n",
     ")"
    ]
   },
